# emacs-swift-module

./: .codespellrc  .gitignore  .pre-commit-config.yaml  .swift-format.json  .swiftformat  .swiftlint.yml  CMakeLists.txt  Cask  Package.swift  README.md  metadata.json
.github/workflows/: docs.yaml  test.yml
Plugins/: ModuleInitializerInjector.swift
Plugins/ModuleFactoryPlugin/: ModuleFactoryPlugin.swift
Source/: CMakeLists.txt  Init.swift
Source/C/: placeholder.m
Source/C/include/: emacs_module.h
Source/Swift/: Call.swift  Channel+Callback+Boilerplate.swift  Channel+Hooks+Boilerplate.swift  Channel+LispCallback+Boilerplate.swift  Channel+SwiftCallback+Boilerplate.swift  Channel.swift  Conversion.swift  Defn.swift  Defun+Boilerplate.swift  Defun.swift  Environment.swift  Error.swift  Init.swift  Lisp+Types.swift  Lock.swift  Module.swift  Raw.swift  Value.swift  Variadic+Utils.swift
Source/Swift/Documentation.docc/: AsyncCallbacks.md  CallingLispFunctions.md  DefiningAModule.md  DefiningLispFunctions.md  EmacsSwiftModule.md  Environment.md  ErrorHandling.md  Lifetimes.md  TypeConversions.md
Test/: swift-module-test.el
Test/TestModule/: Main.swift  Test.swift
data/documentation/: emacsswiftmodule.json
data/documentation/emacsswiftmodule/: asynccallbacks.json  (+19 more)
index/: index.json
test/: swift-module-test.el  test-module-pkg.el
test/Integration/: IntegrationTests.swift
test/TestModule/: Test.swift
test/Unit/: CallTests.swift  ChannelTests.swift  ConversionTests.swift  DefunTests.swift  ErrorTests.swift  LeaksTests.swift  LispTypesTests.swift
(+205 files in other folders)
